<resources>
    <string name="app_name">ConvertidorConFragments</string>

    // Strings del Menú Principal
    <string name="area">Area</string>
    <string name="peso">Peso</string>
    <string name="distancia">Distancia</string>
    <string name="volumen">Volumen</string>
    <string name="cocina">Cocina</string>
    <string name="presion">Presion</string>
    <string name="temperatura">Temperatura</string>

    // Afines a todas los procesos
    <string name="ingrese_un_valor">Ingrese un valor</string>
    <string name="de">De:</string>
    <string name="a">A:</string>
    <string name="convertir">convertir</string>
    <string name="valida_valor">El valor debe ser mayor a 0</string>
    <string name="no_implementado">No Implementado aún</string>


    // Strings del Radio Button Peso
    <string name="kg">Kg</string>
    <string name="g">g</string>
    <string name="mg">mg</string>
    <string name="libras">Libras</string>
    <string name="t_metrica">T(Metrica)</string>
    <string name="t_imperial">T(Imperial)</string>
    <string name="oz">Oz</string>

    // Strings del Radio Button Distancia
    <string name="km">km</string>
    <string name="m">m</string>
    <string name="cm">cm</string>
    <string name="millas">millas</string>
    <string name="pies">pies</string>
    <string name="pulgadas">pulgadas</string>
    <string name="yardas">Yardas</string>

    // Strings del Radio Button Distancia
    <string name="litros">Litros</string>
    <string name="mililitros">Mililitros</string>
    <string name="cm3">cm³</string>
    <string name="galones_usa">Galones (USA)</string>
    <string name="pintas_usa">Pintas (USA)</string>
    <string name="cucharadas_metrico">Cucharadas (Métrico)</string>
    <string name="tazas_metrico">Tazas (Métrico)</string>

    // Strings del Radio Button Temperatura
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="reaumur">Reaumur</string>
    <string name="rankine">Rankine</string>
    <string name="kelvin">Kelvin</string>

    // Strings del Radio Button Presión
    <string name="pascal">Pascal</string>
    <string name="bar">Bar</string>
    <string name="kilopascal">KiloPascal</string>
    <string name="megapascal">MegaPascal</string>
    <string name="psi">PSI</string>
    <string name="kgf_cm2">kgf/cm²</string>
    <string name="inhg">inHg</string>
    <string name="atm">ATM</string>

    // Strings del detalle cocina
    <string name="_1_taza">1 Taza</string>
    <string name="_1_2_taza">1/2 Taza</string>
    <string name="_1_4_taza">1/4 Taza</string>
    <string name="todo">TODO</string>

    // Strings del Radio Button Area
    <string name="cm2">cm²</string>
    <string name="dm2">dm²</string>
    <string name="hectareas">Hectareas</string>
    <string name="pies_cuadrados">Pies Cuadrados</string>
    <string name="pulgadas_cuadradas">Pulgadas Cuadradas</string>
    <string name="km2">km²</string>
    <string name="m2">m²</string>
    <string name="yardas_cuadradas">Yardas Cuadradas</string>
    <string name="acres">Acres</string>
    <string name="millas_cuadradas">Millas Cuadradas</string>


</resources>
