<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Fragmentos.FragmentPeso">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ingrese_un_valor"
            android:id="@+id/etEntradaPeso"
            android:inputType="numberDecimal"
            android:layout_margin="10dp"
            android:importantForAutofill="no" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:layout_weight="1">

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight=".5"
                android:id="@+id/rgDE"
                tools:ignore="NestedWeights">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CategoryStyle"
                    android:background="@color/categoria_peso"
                    android:text="@string/de"/>

                <RadioButton
                    style="@style/RadioButtonStyle"
                    android:text="@string/kg"
                    android:checked="true"
                    android:id="@+id/rbKGDE"
                    />

                <RadioButton
                    style="@style/RadioButtonStyle"
                    android:enabled="false"
                    android:text="@string/g"
                    android:id="@+id/rbGDE"
                    />

                <RadioButton
                    style="@style/RadioButtonStyle"
                    android:text="@string/mg"
                    android:id="@+id/rbMGDE"
                    />

                <RadioButton
                    style="@style/RadioButtonStyle"
                    android:text="@string/t_metrica"
                    android:id="@+id/rbTMDE"
                    />

                <RadioButton
                    style="@style/RadioButtonStyle"
                    android:text="@string/t_imperial"
                    android:id="@+id/rbTIDE"
                    />

                <RadioButton
                    style="@style/RadioButtonStyle"
                    android:text="@string/libras"
                    android:id="@+id/rbLIBRADE"
                    />

                <RadioButton
                    style="@style/RadioButtonStyle"
                    android:text="@string/oz"
                    android:id="@+id/rbOZDE"
                    />
            </RadioGroup>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/rgA"
                android:layout_weight=".5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CategoryStyle"
                    android:background="@color/categoria_peso"
                    android:text="@string/a"/>

                <RadioButton
                    style="@style/RadioButtonStyle"
                    android:text="@string/kg"
                    android:enabled="false"
                    android:id="@+id/rbKGA"
                    />

                <RadioButton
                    style="@style/RadioButtonStyle"
                    android:checked="true"
                    android:text="@string/g"
                    android:id="@+id/rbGA"
                    />

                <RadioButton
                    style="@style/RadioButtonStyle"
                    android:text="@string/mg"
                    android:id="@+id/rbMGA"
                    />

                <RadioButton
                    style="@style/RadioButtonStyle"
                    android:text="@string/t_metrica"
                    android:id="@+id/rbTMA"
                    />

                <RadioButton
                    style="@style/RadioButtonStyle"
                    android:text="@string/t_imperial"
                    android:id="@+id/rbTIA"
                    />

                <RadioButton
                    style="@style/RadioButtonStyle"
                    android:text="@string/libras"
                    android:id="@+id/rbLIBRAA"
                    />

                <RadioButton
                    style="@style/RadioButtonStyle"
                    android:text="@string/oz"
                    android:id="@+id/rbOZA"
                    />
            </RadioGroup>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/CategoryStyle"
            android:background="@color/categoria_peso"
            android:layout_margin="10dp"
            android:id="@+id/tvResultadoPeso"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/convertir"
            android:layout_gravity="end"
            android:id="@+id/bConvertir"
            />
    </LinearLayout>
</ScrollView>
